# real-time-monitoring-agent

./: CLAUDE.md  Cargo.toml
monitor/: Cargo.toml
monitor-common/: Cargo.toml
monitor-common/src/: lib.rs
monitor-cpp/: CMakeLists.txt
monitor-cpp/src/: kafka_producer.cpp  kafka_producer.h  main.cpp  network_event.h
monitor/src/: kafka.rs  main.rs
