[workspace]
# monitor-ebpf is excluded — it required a separate BPF target and nightly
# toolchain. Packet capture is now done via pcap (libpcap) instead.
members = [
    "monitor",
    "monitor-common",
]
default-members = ["monitor", "monitor-common"]

resolver = "2"

# ─── Shared dependency versions ────────────────────────────────────────────────

[workspace.dependencies]
monitor-common = { path = "monitor-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Packet capture
pcap = "2"
pnet = "0.35"

# Kafka producer
rdkafka = { version = "0.36", features = ["dynamic-linking"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log        = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow    = "1"
thiserror = "2"

# ─── Build profiles ─────────────────────────────────────────────────────────────

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
