[package]
name    = "monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monitor"
path = "src/main.rs"

[dependencies]
# Shared event types
monitor-common = { workspace = true }

# Packet capture (libpcap binding)
pcap = { workspace = true }

# Packet parsing (Ethernet / IPv4 / TCP headers)
pnet = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Kafka producer
rdkafka = { workspace = true }

# Serialization for Kafka messages
serde      = { workspace = true }
serde_json = { workspace = true }

# Logging
log        = { workspace = true }
env_logger = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }
